# glowing-meme

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  structure.txt
agent/: __init__.py  agent.py  glowing-meme-agent.service
docs/: DESIGN.md  PACKAGING.md  VALIDATION_TESTS.md
packaging/agent/: PKGBUILD  glowing-meme-agent.install
packaging/agent/debian/: changelog  control  postinst  postrm  rules
packaging/monitor/: PKGBUILD  glowing-meme-monitor-launcher  glowing-meme-monitor.desktop
packaging/monitor/debian/: changelog  control  postinst  rules
scripts/: build_packages.sh
src/glowing_meme/: __init__.py  app.py  config.py  discovery.py  models.py  polling.py  ui_cli.py
tests/: conftest.py  test_agent.py  test_discovery.py  test_models.py  test_polling.py  test_ui_cli.py
