[project]
name = "glowing-meme"
dynamic = ["version"]
description = "Tailnet machine monitor"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
agent = ["aiohttp>=3.9", "psutil>=6"]
desktop = ["PySide6>=6.6"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "black>=24"]

[project.scripts]
glowing-meme-monitor = "glowing_meme.app:main"

[project.urls]
Homepage = "https://github.com/glowing-meme/glowing-meme"
Repository = "https://github.com/glowing-meme/glowing-meme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/glowing_meme/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/glowing_meme"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
